# wasm-playground

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile-wasi.sh  objdump.sh  package-lock.json  package.json  pyproject.toml
.github/: build-aarch64.yaml
.github/workflows/: build-aarch64.yml
arm64/: README.md  n_sum.c  n_sum.s  n_sum_extern.s  nop_fn.s  wrapper_extern.s  wrapper_main.c
arm64v8/: README.md  asm64.s  hello.c
cmake/: aarch64-toolchain.cmake
docs/: ASSEMBLER.md  call_indirect.drawio  call_indirect.md
docs/genai-explainer/: call_indirect.md  jit-execution.md  movk-instruction.md  stack-branch.md  subs-instruction.md  trap-handling.md  wasm-blocks.md
node-wasm-runner/: run.js
runtime/node/: run.js
spec-test/: div_test.cpp  loop.wast  wast_to_gtest.py
src/: CMakeLists.txt  tiny-wasm.cpp
src/kaitai/: CMakeLists.txt  vlq_base128_le.cpp  vlq_base128_le.h  webassembly.cpp  webassembly.h  webassembly.ksy  webassembly.ksy.bak
src/modules/: CMakeLists.txt  aarch64-compounds.cpp  aarch64-compounds.hpp  aarch64-instructions-bit.cpp  aarch64-instructions-bit.hpp  aarch64-instructions-branch.cpp  aarch64-instructions-branch.hpp  aarch64-instructions-mem.cpp  aarch64-instructions-mem.hpp  aarch64-instructions.cpp  aarch64-instructions.hpp  api-functions.cpp  api-functions.hpp  assembler-globals.cpp  assembler-globals.hpp  assembler-memory.cpp  assembler-memory.hpp  assembler-tables.cpp  assembler-tables.hpp  assembler.cpp  assembler.hpp  builtin.cpp  builtin.hpp  colors.hpp  debug.cpp  debug.hpp  function.cpp  function.hpp  globals.cpp  globals.hpp  helper.hpp  instructions.hpp  leb128.cpp  leb128.hpp  loader.cpp  loader.hpp  module.cpp  module.hpp  opcodes.hpp  runtime.cpp  (+12 more)
test-generator/: generate.py  gtest.cpp.j2  macros.j2
tests/: CMakeLists.txt  arithmetic_test.cpp  bit_test.cpp  block_extended_test.cpp  block_test.cpp  branch_test.cpp  call_indirect_test.cpp  call_test.cpp  chapter02_test.cpp  compare_test.cpp  conditionals_test.cpp  div_test.cpp  division_test.cpp  echo_test.cpp  elfwriter.cpp  elfwriter.hpp  empty_test.cpp  extern_test.cpp  functions_test.cpp  globals_extended_test.cpp  globals_test.cpp  helper.cpp  helper.hpp  instructions_test.cpp  leb128_test.cpp  linear-memory-data_test.cpp  linear-memory-grow_test.cpp  linear-memory-load_test.cpp  linear-memory-store_test.cpp  linear_memory_data.cpp  linear_memory_data_test.cpp  loader_test.cpp  local_extended_test.cpp  local_test.cpp  loop_extended_test.cpp  loop_test.cpp  memory_extended_test.cpp  objdump.cpp  stack_overflow_test.cpp
tests/assets/: abs.wasm  bit.wat  block-extended.wasm  block-extended.wat  block.wasm  block.wast  block.wat  branch.wasm  branch.wat  call.wast  call_indirect.wast  compare.wat  division.wat  echo.wasm  echo.wat  empty-fn.wat  extern.c  extern.wasm  fractal.c  fractal.wasm  functions.wat  functions_indirect.wat  global.wast  globals-extended.wat  linear-memory-data.wast  linear-memory-grow.wast  linear-memory-load.wast  linear-memory-store.wast  local-extended.wat  local.wast  loop-extended.wat  memory-grow.wat  memory.wat  myPrint.c  myPrint.wasm  stack_overflow.wast
tests/machinecode/: abs.asm  arithmetic.0.asm  arithmetic.1.asm  bit.asm  block-extended.asm  block.0.asm  branch.asm  call.0.asm  call_indirect.0.asm  call_indirect.1.asm  call_indirect.2.asm  compare.asm  conditionals.0.asm  division.asm  echo.asm  empty-fn.asm  extern.asm  fractal.asm  functions.asm  functions_indirect.asm  global.0.asm  globals-extended.asm  linear-memory-data.0.asm  linear-memory-grow.0.asm  linear-memory-grow.1.asm  linear-memory-grow.2.asm  linear-memory-grow.3.asm  linear-memory-grow.4.asm  linear-memory-load.0.asm  linear-memory-store.0.asm  local-extended.asm  local.0.asm  local.1.asm  local.2.asm  loop-extended.asm  loop.0.asm  memory-grow.asm  memory.asm  myPrint.asm  stack_overflow.0.asm
tiny-wasm/: .clang-tidy  CMakeLists.txt  README.md  tiny-wasm.cpp  version.hpp.in
tiny-wasm/modules/: CMakeLists.txt  colors.hpp  tiny-assembler.hpp  tiny-loader.cpp  tiny-loader.hpp
wasm/: abs.wat  all_elements.wasm  all_elements.wat  all_imports.wasm  all_imports.wat  block-extended.wasm  block-extended.wat  branch.wat  compare.wasm  compare.wat  conditionals.json  conditionals.wast  const-fn.wasm  const-fn.wat  division.wasm  echo.wasm  n_sum.wasm  n_sum.wat
wasm/src/: n_sum.wat
